--- a/index.html
+++ b/index.html
@@ -3,18 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>folio-flow-dynamic-display</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Kamran Mustafa Portfolio</title>
 
-    <meta property="og:title" content="folio-flow-dynamic-display" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="Kamran Mustafa - Full Stack Developer" />
+    <meta name="description" content="Full Stack Developer specializing in modern web technologies. Available for work opportunities." />
+    <meta name="author" content="Kamran Mustafa" />
+    <meta name="keywords" content="Full Stack Developer, Web Developer, JavaScript, React, Node.js, HTML, CSS, TypeScript, Express.js, MongoDB, MySQL, PostgreSQL, Python, Django, REST API, GraphQL, Git, GitHub, DevOps, Docker, Frontend Developer, Backend Developer, Software Engineer, Agile, Scrum, Portfolio, Freelance Developer, Remote Developer, MERN Stack, MEAN Stack, Web Development" />
+    <link rel="canonical" href="https://your-portfolio-site.com" />
+
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://your-portfolio-site.com" />
+    <meta property="og:title" content="Kamran Mustafa - Full Stack Developer Portfolio Website" />
+    <meta property="og:description" content="Full Stack Developer with expertise in modern web technologies, open to exciting new projects." />
+    <meta property="og:image" content="../../assets/kamran_mustafa.jpg" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- Favicon (optional) -->
+    <!-- <link rel="icon" href="/favicon.ico" type="image/x-icon" /> -->
+     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+     <link rel="manifest" href="/site.webmanifest">
   </head>
 
   <body>
