website domain added

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <meta name="description" content="Full Stack Developer specializing in modern web technologies. Available for work opportunities." />
     <meta name="author" content="Kamran Mustafa" />
     <meta name="keywords" content="Full Stack Developer, Web Developer, JavaScript, React, Node.js, HTML, CSS, TypeScript, Express.js, MongoDB, MySQL, PostgreSQL, Python, Django, REST API, GraphQL, Git, GitHub, DevOps, Docker, Frontend Developer, Backend Developer, Software Engineer, Agile, Scrum, Portfolio, Freelance Developer, Remote Developer, MERN Stack, MEAN Stack, Web Development" />
-    <link rel="canonical" href="https://your-portfolio-site.com" />
+    <link rel="canonical" href="https://www.kamraneg.com/" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://your-portfolio-site.com" />
+    <meta property="og:url" content="https://www.kamraneg.com/" />
     <meta property="og:title" content="Kamran Mustafa - Full Stack Developer Portfolio Website" />
     <meta property="og:description" content="Full Stack Developer with expertise in modern web technologies, open to exciting new projects." />
     <meta property="og:image" content="../../assets/kamran_mustafa.jpg" />
