--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta property="og:image" content="/kamran_mustafa.jpg" />
 
     <!-- Favicon (optional) -->
-    <!-- <link rel="icon" href="/favicon.ico" type="image/x-icon" /> -->
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
      <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
      <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
      <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
