--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:url" content="https://www.kamraneg.com/" />
     <meta property="og:title" content="Kamran Mustafa - Full Stack Developer Portfolio Website" />
     <meta property="og:description" content="Full Stack Developer with expertise in modern web technologies, open to exciting new projects." />
-    <meta property="og:image" content="https://www.kamraneg.com/kamran_mustafa.jpg" />
+    <meta property="og:image" content="https://www.kamraneg.com/kamran_mustafa.png" />
 
     <!-- Favicon (optional) -->
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
