--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     <meta property="og:description" content="Full Stack Developer with expertise in modern web technologies, open to exciting new projects." />
     <meta property="og:image" content="https://www.kamraneg.com/kamran_mustafa.png" />
 
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:image" content="https://www.kamraneg.com/kamran_mustafa.jpg" />
+
     <!-- Favicon (optional) -->
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
      <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
