--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
     <meta property="og:url" content="https://www.kamraneg.com/" />
     <meta property="og:title" content="Kamran Mustafa - Full Stack Developer Portfolio Website" />
     <meta property="og:description" content="Full Stack Developer with expertise in modern web technologies, open to exciting new projects." />
-    <meta property="og:image" content="https://www.kamraneg.com/kamran_mustafa.png" />
+    <meta property="og:image" content="https://www.kamraneg.com/kamran_mustafa.jpeg" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="https://www.kamraneg.com/kamran_mustafa.jpg" />
+    <meta name="twitter:title" content="Kamran Mustafa - Full Stack Developer Portfolio Website" />
+    <meta name="twitter:description" content="Full Stack Developer with expertise in modern web technologies, open to exciting new projects." />
+    <meta name="twitter:image" content="https://www.kamraneg.com/kamran_mustafa.jpeg" />
 
     <!-- Favicon (optional) -->
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
